--- a/assets/images/movierank.html
+++ b/assets/images/movierank.html
@@ -52,6 +52,6 @@
             </li>
             <hr/>
         </ul>
-        <a href="F:/FSD/HTML/UnZipped/4.3 HTML Porfolio Project/index.html" target="_self">Click here to visit Portfolio</a>
+        <a href="../../index.html" target="_self">Click here to visit Portfolio</a>
     </body>
 </html>
