--- a/public/about.html
+++ b/public/about.html
@@ -22,7 +22,7 @@
     Here's to chasing dreams and making a difference!<br/><hr>
     Arul Karthikeyan
     <hr>
-    <a href="F:/FSD/HTML/UnZipped/4.3 HTML Porfolio Project/index.html" target="_self">Click here to visit Portfolio</a>
+    <a href="../index.html" target="_self">Click here to visit Portfolio</a>
   </p>
   
 </body>
