--- a/public/birthdayinvite.html
+++ b/public/birthdayinvite.html
@@ -12,4 +12,4 @@
 <!-- Example Google Maps Link -->
 <a href="https://goo.gl/maps/8tD416LN7Qnv1c166" target="_blank">Google maps Location</a>
 <hr/>
-<a href="F:/FSD/HTML/UnZipped/4.3 HTML Porfolio Project/index.html" target="_self">Click here to visit Portfolio</a>
+<a href="../index.html" target="_self">Click here to visit Portfolio</a>
