--- a/public/contact.html
+++ b/public/contact.html
@@ -13,4 +13,4 @@
 Email: 2005arulkar@gmail.com</p>
 </h3>
   <hr/>
-  <a href="F:/FSD/HTML/UnZipped/4.3 HTML Porfolio Project/index.html" target="_self">Click here to visit Portfolio</a>
+  <a href="../index.html" target="_self">Click here to visit Portfolio</a>
